# fimsh

./: .gitignore  Cargo.toml
client/dumb-template/: package.json
client/dumb-template/src/: App.tsx  index.html
client/dumb-template/src/pages/: 404.tsx  Home.tsx
src/: fish.rs  main.rs
