[package]
name = "fimsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde_json = "1.0.93"
serde = "1.0.152"
mongodb = "2.3.1"
dotenv = "0.15.0"
tokio = {version = "1.25.0" , features = ["full"]}
uuid = "1.3.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
rand = "0.8.5"
